--- a/src/frontend/formularios/formulario_inscripcion.html
+++ b/src/frontend/formularios/formulario_inscripcion.html
@@ -1,12 +1,121 @@
  <!DOCTYPE html>
 <HTML>
-  <head>
-    <title>Aca ponemos el Formulario</title>
-  </head>
-  <body>
-    <div id="una capa">
-      <h1>Formulario de inscripcion</h1>
-      <p>Aca ponemos la wea del formulario asdkasldkjaskdjskd</p>
+<head>
+  <meta charset="UTF-8">
+  <title>Pagína inicial</title>
+  <link rel="stylesheet" href="./formulario_inscripcion.css">
+  <link rel="stylesheet" href="../header/header.css">
+  <link rel="stylesheet" href="../footer/footer.css">
+</head>
+
+<!-- ===== HEADER ===== -->
+    <header class="main-header">
+        <div class="header-logo">
+        <div class="logo-circle"></div>
+        <div class="logo-text">
+            <h1>Instituto educativo</h1>
+            <h2>Infancia</h2>
+        </div>
+        </div>
+
+        <nav class="header-nav">
+        <a href="../interfaz inicial/main.html" class="nav-link">Inicio</a>
+        <span class="nav-link">Contacto</span>
+        <div class="nav-box">
+            <span class="nav-icon">📅</span>
+        </div>
+        <a href="../login/login.html" class="nav-link login-link">
+            Iniciar sesión
+        </a>
+        </nav>
+
+    </header>
+
+
+  <!-- ===== MAIN ===== -->
+  <main class="formulario-container">
+    <section class="formulario-section">
+      <h2>Datos del acudiente</h2>
+      <form id="form-inscripcion">
+        <div class="form-group">
+          <label for="nombreAcudiente1">Primer nombre</label>
+          <input type="text" id="nombreAcudiente1" required>
+        </div>
+        <div class="form-group">
+          <label for="nombreAcudiente2">Segundo nombre</label>
+          <input type="text" id="nombreAcudiente2">
+        </div>
+        <div class="form-group">
+          <label for="apellidoAcudiente1">Primer apellido</label>
+          <input type="text" id="apellidoAcudiente1" required>
+        </div>
+        <div class="form-group">
+          <label for="apellidoAcudiente2">Segundo apellido</label>
+          <input type="text" id="apellidoAcudiente2">
+        </div>
+        <div class="form-group">
+          <label for="correoAcudiente">Correo</label>
+          <input type="email" id="correoAcudiente" required>
+        </div>
+        <div class="form-group">
+          <label for="cedulaAcudiente">Cédula ciudadanía</label>
+          <input type="text" id="cedulaAcudiente" required>
+        </div>
+
+        <div class="checkbox-group">
+          <input type="checkbox" id="autorizo" required>
+          <label for="autorizo"><em>Autorizo uso de datos personales</em></label>
+        </div>
+      </form>
+    </section>
+
+    <section class="formulario-section">
+      <h2>Datos del infante</h2>
+      <form>
+        <div class="form-group">
+          <label for="nombreInfante1">Primer nombre</label>
+          <input type="text" id="nombreInfante1" required>
+        </div>
+        <div class="form-group">
+          <label for="nombreInfante2">Segundo nombre</label>
+          <input type="text" id="nombreInfante2">
+        </div>
+        <div class="form-group">
+          <label for="apellidoInfante1">Primer apellido</label>
+          <input type="text" id="apellidoInfante1" required>
+        </div>
+        <div class="form-group">
+          <label for="apellidoInfante2">Segundo apellido</label>
+          <input type="text" id="apellidoInfante2">
+        </div>
+        <div class="form-group">
+          <label for="fechaNacimiento">Fecha de nacimiento</label>
+          <input type="date" id="fechaNacimiento" required>
+        </div>
+        <div class="form-group">
+          <label for="grado">Grado al que aplica</label>
+          <select id="grado" required>
+            <option value="">Seleccione...</option>
+            <option value="grado1">Grado 1</option>
+            <option value="grado2">Grado 2</option>
+            <option value="grado3">Grado 3</option>
+          </select>
+        </div>
+      </form>
+    </section>
+
+    <div class="form-boton">
+      <button id="btnEnviar" class="btn-enviar">Enviar</button>
     </div>
-  </body>  
+  </main>
+
+
+    <!-- ===== FOOTER ===== -->
+    <footer class="main-footer">
+        <div class="footer-section">Somos una institución sobre...</div>
+        <div class="footer-section">Redes...</div>
+        <div class="footer-section">Cosas...</div>
+    </footer>
+
+    <script src="./formulario_inscripcion.js"></script>
 </HTML>
