feat: Campo de rol

--- a/src/frontend/formularios/formulario_inscripcion.html
+++ b/src/frontend/formularios/formulario_inscripcion.html
@@ -96,9 +96,9 @@
           <label for="grado">Grado al que aplica</label>
           <select id="grado" required>
             <option value="">Seleccione...</option>
-            <option value="grado1">Grado 1</option>
-            <option value="grado2">Grado 2</option>
-            <option value="grado3">Grado 3</option>
+            <option value="grado1">Párvulos</option>
+            <option value="grado2">Caminadores</option>
+            <option value="grado3">Prejardín</option>
           </select>
         </div>
       </form>
