feat: Completo caso de uso de habilitar y deshabilitar un usuario.

--- a/src/frontend/usuarios/vista_admin_usuarios/vista_admin_usuarios.html
+++ b/src/frontend/usuarios/vista_admin_usuarios/vista_admin_usuarios.html
@@ -88,6 +88,6 @@
       <div class="footer-section">Cosas...</div>
     </footer>
 
-    <script src="./vista_admin_usuarios.js" defer></script>
+    <script type="module" src="vista_admin_usuarios.js"></script>
 </body>
 </html>
