feat: Vista de solicitudes completa, script para generar solicitudes de prueba

--- a/src/frontend/academico/vista_admin_academico/vista_admin_academico.html
+++ b/src/frontend/academico/vista_admin_academico/vista_admin_academico.html
@@ -61,13 +61,14 @@
     <section class="panel-opciones">
 
         <div class="opcion-card">
-        <h3>Solicitudes de inscripción</h3>
-        <button class="btn-opcion" onclick="window.location.href='index.html'">
-            Administrar solicitudes
-        </button>
+            <h3>Solicitudes de inscripción</h3>
+            <button class="btn-opcion">
+                Administrar solicitudes
+            </button>
         </div>
 
     </section>
+
 
     </main>
 
