--- a/src/frontend/formularios/formulario_inscripcion.html
+++ b/src/frontend/formularios/formulario_inscripcion.html
@@ -96,9 +96,9 @@
           <label for="grado">Grado al que aplica</label>
           <select id="grado" required>
             <option value="">Seleccione...</option>
-            <option value="grado1">Párvulos</option>
-            <option value="grado2">Caminadores</option>
-            <option value="grado3">Prejardín</option>
+            <option value="Párvulos">Párvulos</option>
+            <option value="Caminadores">Caminadores</option>
+            <option value="Prejardín">Prejardín</option>
           </select>
         </div>
       </form>
