feat: Asignacion de estudiante a un grupo al aceptar una solicitud

--- a/src/frontend/usuarios/vista_admin_usuarios/vista_admin_usuarios.html
+++ b/src/frontend/usuarios/vista_admin_usuarios/vista_admin_usuarios.html
@@ -51,6 +51,10 @@
             </select>
             </div>
 
+            <button id="btnCrearUsuarioAcudinte" class="btn-crear-usuario-acudiente">
+            Crear usuario acudiente
+            </button>
+
             <button id="btnCrearUsuario" class="btn-crear-usuario">
             Crear usuario
             </button>
