feat: Asignacion del profesor a un grupo, endpoints necesarios listos

--- a/src/frontend/academico/vista_admin_academico/vista_admin_academico.html
+++ b/src/frontend/academico/vista_admin_academico/vista_admin_academico.html
@@ -45,8 +45,10 @@
             <thead>
             <tr>
                 <th>Grupo</th>
+                <th>Profesor director</th>
                 <th>Consultar boletines</th>
                 <th>Citación</th>
+
             </tr>
             </thead>
 
