--- a/src/frontend/login/login.html
+++ b/src/frontend/login/login.html
@@ -5,6 +5,7 @@
   <title>Login</title>
   <!-- Estilos separados -->
   <link rel="stylesheet" href="./login.css">
+  <link rel="stylesheet" href="../msg/mensaje.css">
   <link rel="stylesheet" href="../header/header.css">
   <link rel="stylesheet" href="../footer/footer.css">
 </head>
@@ -57,6 +58,7 @@
       <div class="footer-section">Cosas...</div>
     </footer>
 
+    <script src="../msg/mensaje.js" defer></script>
     <script src="./login.js" defer></script>
 </body>
 </html>
