feat: Validacion y msg como globales, se implementaran en todo

--- a/src/frontend/formularios/formulario_inscripcion.html
+++ b/src/frontend/formularios/formulario_inscripcion.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Pagína inicial</title>
   <link rel="stylesheet" href="./formulario_inscripcion.css">
+  <link rel="stylesheet" href="../globales/msg/mensaje.css">
   <link rel="stylesheet" href="../header/header.css">
   <link rel="stylesheet" href="../footer/footer.css">
 </head>
@@ -117,5 +118,6 @@
         <div class="footer-section">Cosas...</div>
     </footer>
 
+    <script src="../globales/msg/mensaje.js"></script>
     <script src="./formulario_inscripcion.js"></script>
 </HTML>
