--- a/src/frontend/login/login.html
+++ b/src/frontend/login/login.html
@@ -5,7 +5,7 @@
   <title>Login</title>
   <!-- Estilos separados -->
   <link rel="stylesheet" href="./login.css">
-  <link rel="stylesheet" href="../msg/mensaje.css">
+  <link rel="stylesheet" href="../globales/msg/mensaje.css">
   <link rel="stylesheet" href="../header/header.css">
   <link rel="stylesheet" href="../footer/footer.css">
 </head>
@@ -58,7 +58,7 @@
       <div class="footer-section">Cosas...</div>
     </footer>
 
-    <script src="../msg/mensaje.js" defer></script>
+    <script src="../globales/msg/mensaje.js" defer></script>
     <script src="./login.js" defer></script>
 </body>
 </html>
