--- a/src/frontend/usuarios/vista_admin_usuarios/vista_admin_usuarios.html
+++ b/src/frontend/usuarios/vista_admin_usuarios/vista_admin_usuarios.html
@@ -5,6 +5,7 @@
   <title>Administrador de usuarios</title>
   <!-- Estilos separados -->
   <link rel="stylesheet" href="./vista_admin_usuarios.css">
+  <link rel="stylesheet" href="../../globales/msg/mensaje.css">
   <link rel="stylesheet" href="../../header/header.css">
   <link rel="stylesheet" href="../../footer/footer.css">
 </head>
@@ -92,6 +93,8 @@
       <div class="footer-section">Cosas...</div>
     </footer>
 
+    <script src="../../globales/msg/mensaje.js"></script>
+    <script src="../../globales/validacion/validacion.js"></script>
     <script type="module" src="vista_admin_usuarios.js"></script>
 </body>
 </html>
