feat: Validacion y msg para modulo de usuarios

--- a/src/frontend/usuarios/creacion_usuario/creacion_usuario.html
+++ b/src/frontend/usuarios/creacion_usuario/creacion_usuario.html
@@ -5,6 +5,7 @@
   <title>Administrador de usuarios</title>
   <!-- Estilos separados -->
   <link rel="stylesheet" href="./creacion_usuario.css">
+  <link rel="stylesheet" href="../../globales/msg/mensaje.css">
   <link rel="stylesheet" href="../../header/header.css">
   <link rel="stylesheet" href="../../footer/footer.css">
 </head>
@@ -54,7 +55,6 @@
               <label class="label-input">Rol</label>
               <select id="inputRol" class="input-text">
                   <option value="">Seleccione...</option>
-                  <option value="Acudiente">Acudiente</option>
                   <option value="Profesor">Profesor</option>
                   <option value="Administrador académico">Administrador académico</option>
                   <option value="Administrador de usuarios">Administrador de usuarios</option>
@@ -86,6 +86,9 @@
       <div class="footer-section">Cosas...</div>
     </footer>
 
+    <script src="../../globales/validacion/validacion.js" defer></script>
+    <script src="../../globales/msg/mensaje.js" defer></script>
     <script src="./creacion_usuario.js" defer></script>
+
 </body>
 </html>
