--- a/src/frontend/usuarios/creacion_usuario_acudiente/creacion_usuario_acudiente.html
+++ b/src/frontend/usuarios/creacion_usuario_acudiente/creacion_usuario_acudiente.html
@@ -5,6 +5,7 @@
   <title>Administrador de usuarios</title>
   <!-- Estilos separados -->
   <link rel="stylesheet" href="./creacion_usuario_acudiente.css">
+  <link rel="stylesheet" href="../../globales/msg/mensaje.css">
   <link rel="stylesheet" href="../../header/header.css">
   <link rel="stylesheet" href="../../footer/footer.css">
 </head>
@@ -78,6 +79,8 @@
       <div class="footer-section">Cosas...</div>
     </footer>
 
+    <script src="../../globales/validacion/validacion.js" defer></script>
+    <script src="../../globales/msg/mensaje.js" defer></script>
     <script src="./creacion_usuario_acudiente.js" defer></script>
 </body>
 </html>
