feat:Seguridad del lado del backend implementada en los endpoints

--- a/src/frontend/academico/asignar_profesor/asignar_profesor.html
+++ b/src/frontend/academico/asignar_profesor/asignar_profesor.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Asignar profesor</title>
     <link rel="stylesheet" href="./asignar_profesor.css">
+    <link rel="stylesheet" href="../../globales/msg/mensaje.css">
     <link rel="stylesheet" href="../../header/header.css">
     <link rel="stylesheet" href="../../footer/footer.css">
 </head>
@@ -36,7 +37,6 @@
 
         <div id="contenedor-profesores"></div>
 
-        <script src="./asignar_profesor.js"></script>
     </body>
 
     <!-- ===== FOOTER ===== -->
@@ -45,4 +45,9 @@
       <div class="footer-section">Redes...</div>
       <div class="footer-section">Cosas...</div>
     </footer>
+    
+    <script src="../../globales/validacion/validacion.js" defer></script>
+    <script src="../../globales/msg/mensaje.js" defer></script>
+    <script src="./asignar_profesor.js"></script>
+
 </html>
