feat: Se agrego logica corregida y seguridad a modulo Academico

--- a/src/frontend/academico/asignar_profesor/asignar_profesor.html
+++ b/src/frontend/academico/asignar_profesor/asignar_profesor.html
@@ -47,7 +47,7 @@
     </footer>
     
     <script src="../../globales/validacion/validacion.js" defer></script>
+    <script src="./asignar_profesor.js" defer></script>
     <script src="../../globales/msg/mensaje.js" defer></script>
-    <script src="./asignar_profesor.js"></script>
 
 </html>
