--- a/src/frontend/academico/vista_admin_academico/vista_admin_academico.html
+++ b/src/frontend/academico/vista_admin_academico/vista_admin_academico.html
@@ -90,8 +90,9 @@
       <div class="footer-section">Cosas...</div>
     </footer>
 
-    <script src="../../globales/validacion/validacion.js" defer></script>
-    <script src="./vista_admin_academico.js" defer></script>
-    <script src="../../globales/msg/mensaje.js" defer></script>
+    <script src="../../globales/validacion/validacion.js"></script>
+    <script src="../../globales/msg/mensaje.js"></script>
+    <script type="module" src="./vista_admin_academico.js"></script>
+
 </body>
 </html>
