--- a/src/frontend/solicitudes/vista_solicitudes/vista_solicitudes.html
+++ b/src/frontend/solicitudes/vista_solicitudes/vista_solicitudes.html
@@ -5,8 +5,9 @@
   <title>Administrador de usuarios</title>
   <!-- Estilos separados -->
   <link rel="stylesheet" href="./vista_solicitudes.css">
-  <link rel="stylesheet" href="../header/header.css">
-  <link rel="stylesheet" href="../footer/footer.css">
+  <link rel="stylesheet" href="../../globales/msg/mensaje.css">
+  <link rel="stylesheet" href="../../header/header.css">
+  <link rel="stylesheet" href="../../footer/footer.css">
 </head>
 
 <body>
@@ -80,6 +81,8 @@
       <div class="footer-section">Cosas...</div>
     </footer>
 
+    <script src="../../globales/validacion/validacion.js"></script>
+    <script src="../../globales/msg/mensaje.js"></script>
     <script type="module" src="./vista_solicitudes.js"></script>
 </body>
 </html>
