feat: Boletines con logica corregida, ademas de seguridad

--- a/src/frontend/boletines/vista_boletines/boletines.html
+++ b/src/frontend/boletines/vista_boletines/boletines.html
@@ -62,6 +62,9 @@
       <div class="footer-section">Cosas...</div>
     </footer>
 
+
+    <script src="../../globales/validacion/validacion.js" defer></script>
+    <script src="../../globales/msg/mensaje.js" defer></script>
     <script src="./boletines.js" defer></script>
 </body>
 </html>
