feat: Descarga de boletines en formato PDF

--- a/src/frontend/boletines/boletin_particular/boletin_particular.html
+++ b/src/frontend/boletines/boletin_particular/boletin_particular.html
@@ -61,9 +61,7 @@
 
     </main>
 
-<script src="./boletin_particular.js" defer></script>
 
-<script src="./boletines.js" defer></script>
 
 
     <!-- ===== FOOTER ===== -->
@@ -74,5 +72,7 @@
     </footer>
 
     <script src="./boletin_particular.js" defer></script>
+    <script src="./descargar_boletin.js"></script>
+
 </body>
 </html>
