--- a/src/frontend/boletines/vista_boletines/boletines.html
+++ b/src/frontend/boletines/vista_boletines/boletines.html
@@ -38,6 +38,7 @@
 
         <h2 class="titulo-boletines">Boletines</h2>
 
+        <button type="button" id="btn-descarga">Descargar</button>        
         <section class="tabla-boletines">
             <table>
             <thead>
@@ -63,6 +64,7 @@
     </footer>
 
 
+    <script src="../boletin_particular/descargar_boletin.js"></script>
     <script src="../../globales/validacion/validacion.js" defer></script>
     <script src="../../globales/msg/mensaje.js" defer></script>
     <script src="./boletines.js" defer></script>
