--- a/src/frontend/login/login.html
+++ b/src/frontend/login/login.html
@@ -59,6 +59,7 @@
     </footer>
 
     <script src="../globales/msg/mensaje.js" defer></script>
+    <script src="../boletines/boletin_particular/descargar_boletin.js"></script>
     <script src="./login.js" defer></script>
 </body>
 </html>
