feat: Logica de listas agregadas al modelo de acudiente

--- a/src/frontend/boletines/boletin_particular/boletin_particular.html
+++ b/src/frontend/boletines/boletin_particular/boletin_particular.html
@@ -73,6 +73,7 @@
 
     <script src="./boletin_particular.js" defer></script>
     <script src="./descargar_boletin.js"></script>
+    <script src="../../header/finalizar_sesion.js"></script>
 
 </body>
 </html>
