--- a/src/frontend/boletines/vista_boletines/boletines.html
+++ b/src/frontend/boletines/vista_boletines/boletines.html
@@ -68,5 +68,6 @@
     <script src="../../globales/validacion/validacion.js" defer></script>
     <script src="../../globales/msg/mensaje.js" defer></script>
     <script src="./boletines.js" defer></script>
+    <script src="../../header/finalizar_sesion.js"></script>
 </body>
 </html>
