feat: Navegabilidad corregida, ocultar inicio, boton de cierre de sesion implementado.

--- a/src/frontend/boletines/boletin_particular/boletin_particular.html
+++ b/src/frontend/boletines/boletin_particular/boletin_particular.html
@@ -73,7 +73,9 @@
 
     <script src="./boletin_particular.js" defer></script>
     <script src="./descargar_boletin.js"></script>
+
     <script src="../../header/finalizar_sesion.js"></script>
+    <script src="../../header/pagina_inicio.js"> </script>
 
 </body>
 </html>
