--- a/src/frontend/evaluacion/evaluacion_estudiante/evaluacion_estudiante.html
+++ b/src/frontend/evaluacion/evaluacion_estudiante/evaluacion_estudiante.html
@@ -19,7 +19,7 @@
         </div>
 
         <nav class="header-nav">
-        <a href="../interfaz inicial/main.html" class="nav-link">Inicio</a>
+        <a href="../interfaz inicial/main.html" class="nav-link" id="btn-inicio">Inicio</a>
         <span class="nav-link">Contacto</span>
         <div class="nav-box">
             <span class="nav-icon">📅</span>
@@ -77,5 +77,8 @@
 
     <script src="./evaluacion_estudiante.js"></script>
     <script src="./generarBoletin.js"></script>
+
+    <script src="../../header/finalizar_sesion.js"></script>
+    <script src="../../header/pagina_inicio.js"> </script>
 
 </HTML>
