--- a/src/frontend/evaluacion/vista_profesor/vista_profesor.html
+++ b/src/frontend/evaluacion/vista_profesor/vista_profesor.html
@@ -21,7 +21,7 @@
       </div>
 
       <nav class="header-nav">
-        <a href="../interfaz inicial/main.html" class="nav-link">Inicio</a>
+        <a href="../interfaz inicial/main.html" class="nav-link" id="btn-inicio">Inicio</a>
         <span class="nav-link">Contacto</span>
         <div class="nav-box">
           <span class="nav-icon">📅</span>
@@ -72,5 +72,9 @@
     </footer>
 
     <script src="./vista_profesor.js" defer></script>
+
+    <script src="../../header/finalizar_sesion.js"></script>
+    <script src="../../header/pagina_inicio.js"> </script>
+
 </body>
 </html>
