--- a/src/frontend/login/login.html
+++ b/src/frontend/login/login.html
@@ -22,7 +22,7 @@
       </div>
 
       <nav class="header-nav">
-        <a href="../interfaz inicial/main.html" class="nav-link">Inicio</a>
+        <a href="../interfaz inicial/main.html" class="nav-link" id="btn-inicio">Inicio</a>
         <span class="nav-link">Contacto</span>
         <div class="nav-box">
           <span class="nav-icon">📅</span>
@@ -61,5 +61,8 @@
     <script src="../globales/msg/mensaje.js" defer></script>
     <script src="../boletines/boletin_particular/descargar_boletin.js"></script>
     <script src="./login.js" defer></script>
+
+    <script src="../../header/pagina_inicio.js"> </script>
+
 </body>
 </html>
