--- a/src/frontend/usuarios/vista_admin_usuarios/vista_admin_usuarios.html
+++ b/src/frontend/usuarios/vista_admin_usuarios/vista_admin_usuarios.html
@@ -22,7 +22,7 @@
       </div>
 
       <nav class="header-nav">
-        <a href="../interfaz inicial/main.html" class="nav-link">Inicio</a>
+        <a href="../interfaz inicial/main.html" class="nav-link" id="btn-inicio">Inicio</a>
         <span class="nav-link">Contacto</span>
         <div class="nav-box">
           <span class="nav-icon">📅</span>
@@ -96,5 +96,10 @@
     <script src="../../globales/msg/mensaje.js"></script>
     <script src="../../globales/validacion/validacion.js"></script>
     <script type="module" src="vista_admin_usuarios.js"></script>
+
+    <script src="../../header/finalizar_sesion.js"></script>
+    <script src="../../header/pagina_inicio.js"> </script>
+
+
 </body>
 </html>
