--- a/src/frontend/academico/asignar_profesor/asignar_profesor.html
+++ b/src/frontend/academico/asignar_profesor/asignar_profesor.html
@@ -20,7 +20,7 @@
       </div>
 
       <nav class="header-nav">
-        <a href="../interfaz inicial/main.html" class="nav-link">Inicio</a>
+        <a href="../interfaz inicial/main.html" class="nav-link" id="btn-inicio">Inicio</a>
         <span class="nav-link">Contacto</span>
         <div class="nav-box">
           <span class="nav-icon">📅</span>
@@ -49,5 +49,8 @@
     <script src="../../globales/validacion/validacion.js" defer></script>
     <script src="./asignar_profesor.js" defer></script>
     <script src="../../globales/msg/mensaje.js" defer></script>
+
+    <script src="../../header/finalizar_sesion.js"></script>
+    <script src="../../header/pagina_inicio.js"> </script>
 
 </html>
