--- a/src/frontend/academico/vista_admin_academico/vista_admin_academico.html
+++ b/src/frontend/academico/vista_admin_academico/vista_admin_academico.html
@@ -21,7 +21,7 @@
       </div>
 
       <nav class="header-nav">
-        <a href="../interfaz inicial/main.html" class="nav-link">Inicio</a>
+        <a href="../interfaz inicial/main.html" class="nav-link" id="btn-inicio">Inicio</a>
         <span class="nav-link">Contacto</span>
         <div class="nav-box">
           <span class="nav-icon">📅</span>
@@ -93,6 +93,9 @@
     <script src="../../globales/validacion/validacion.js"></script>
     <script src="../../globales/msg/mensaje.js"></script>
     <script type="module" src="./vista_admin_academico.js"></script>
+
+    <script src="../../header/finalizar_sesion.js"></script>
+    <script src="../../header/pagina_inicio.js"> </script>
 
 </body>
 </html>
