--- a/src/frontend/boletines/vista_boletines/boletines.html
+++ b/src/frontend/boletines/vista_boletines/boletines.html
@@ -21,7 +21,7 @@
       </div>
 
       <nav class="header-nav">
-        <a href="../interfaz inicial/main.html" class="nav-link">Inicio</a>
+        <a href="../interfaz inicial/main.html" class="nav-link" id="btn-inicio">Inicio</a>
         <span class="nav-link">Contacto</span>
         <div class="nav-box">
           <span class="nav-icon">📅</span>
@@ -38,7 +38,6 @@
 
         <h2 class="titulo-boletines">Boletines</h2>
 
-        <button type="button" id="btn-descarga">Descargar</button>        
         <section class="tabla-boletines">
             <table>
             <thead>
@@ -68,6 +67,9 @@
     <script src="../../globales/validacion/validacion.js" defer></script>
     <script src="../../globales/msg/mensaje.js" defer></script>
     <script src="./boletines.js" defer></script>
+
     <script src="../../header/finalizar_sesion.js"></script>
+    <script src="../../header/pagina_inicio.js"> </script>
+
 </body>
 </html>
