--- a/src/frontend/formularios/formulario_inscripcion.html
+++ b/src/frontend/formularios/formulario_inscripcion.html
@@ -20,7 +20,7 @@
         </div>
 
         <nav class="header-nav">
-        <a href="../interfaz inicial/main.html" class="nav-link">Inicio</a>
+        <a href="../interfaz inicial/main.html" class="nav-link" id="btn-inicio">Inicio</a>
         <span class="nav-link">Contacto</span>
         <div class="nav-box">
             <span class="nav-icon">📅</span>
@@ -120,4 +120,7 @@
 
     <script src="../globales/msg/mensaje.js"></script>
     <script src="./formulario_inscripcion.js"></script>
+    
+    <script src="../../header/pagina_inicio.js"> </script>
+
 </HTML>
