--- a/src/frontend/interfaz inicial/main.html
+++ b/src/frontend/interfaz inicial/main.html
@@ -20,7 +20,7 @@
         </div>
 
         <nav class="header-nav">
-        <a href="../interfaz inicial/main.html" class="nav-link">Inicio</a>
+        <a href="../interfaz inicial/main.html" class="nav-link" id="btn-inicio">Inicio</a>
         <span class="nav-link">Contacto</span>
         <div class="nav-box">
             <span class="nav-icon">📅</span>
@@ -60,5 +60,8 @@
         <div class="footer-section">Redes...</div>
         <div class="footer-section">Cosas...</div>
     </footer>
+
+    <script src="../../header/pagina_inicio.js"> </script>
+
 </body>
 </HTML>
