--- a/src/frontend/usuarios/creacion_usuario_acudiente/creacion_usuario_acudiente.html
+++ b/src/frontend/usuarios/creacion_usuario_acudiente/creacion_usuario_acudiente.html
@@ -22,7 +22,7 @@
       </div>
 
       <nav class="header-nav">
-        <a href="../interfaz inicial/main.html" class="nav-link">Inicio</a>
+        <a href="../interfaz inicial/main.html" class="nav-link" id="btn-inicio">Inicio</a>
         <span class="nav-link">Contacto</span>
         <div class="nav-box">
           <span class="nav-icon">📅</span>
@@ -82,5 +82,9 @@
     <script src="../../globales/validacion/validacion.js" defer></script>
     <script src="../../globales/msg/mensaje.js" defer></script>
     <script src="./creacion_usuario_acudiente.js" defer></script>
+
+    <script src="../../header/finalizar_sesion.js"></script>
+    <script src="../../header/pagina_inicio.js"> </script>
+
 </body>
 </html>
