feat: Seguridad en modulo de boletines

--- a/src/frontend/boletines/boletin_particular/boletin_particular.html
+++ b/src/frontend/boletines/boletin_particular/boletin_particular.html
@@ -71,6 +71,9 @@
       <div class="footer-section">Cosas...</div>
     </footer>
 
+    <script src="../../globales/msg/mensaje.js"></script>
+    <script src="../../globales/validacion/validacion.js"></script>
+    
     <script src="./boletin_particular.js" defer></script>
     <script src="./descargar_boletin.js"></script>
 
