--- a/src/frontend/evaluacion/evaluacion_estudiante/evaluacion_estudiante.html
+++ b/src/frontend/evaluacion/evaluacion_estudiante/evaluacion_estudiante.html
@@ -58,15 +58,13 @@
 
         <div class="botones-acciones">
             <button type="button" id="btnGuardarBoletin" class="btn-guardar">Guardar cambios</button>
+            <button type="button" id="btnVolver" class="btn-volver">Volver</button>
         </div>
+
 
     </form>
 
     </main>
-
-
-
-
 
     <!-- ===== FOOTER ===== -->
     <footer class="main-footer">
@@ -75,8 +73,11 @@
         <div class="footer-section">Cosas...</div>
     </footer>
 
+    <script src="../../globales/msg/mensaje.js"></script>
+    <script src="../../globales/validacion/validacion.js"></script>
+
     <script src="./evaluacion_estudiante.js"></script>
-    <script src="./generarBoletin.js"></script>
+    <script type="module" src="./generar_boletin.js"></script>
 
     <script src="../../header/finalizar_sesion.js"></script>
     <script src="../../header/pagina_inicio.js"> </script>
