--- a/src/frontend/evaluacion/vista_profesor/vista_profesor.html
+++ b/src/frontend/evaluacion/vista_profesor/vista_profesor.html
@@ -41,10 +41,6 @@
                 Lista de estudiantes<br>
                 grupo del Grupo_id
             </h2>
-
-            <button class="btn-generar" onclick="window.location.href='index.html'">
-                Generar boletines
-            </button>
         </div>
 
         <div class="contenedor-tabla">
@@ -70,6 +66,9 @@
       <div class="footer-section">Redes...</div>
       <div class="footer-section">Cosas...</div>
     </footer>
+
+    <script src="../../globales/msg/mensaje.js"></script>
+    <script src="../../globales/validacion/validacion.js"></script>
 
     <script src="./vista_profesor.js" defer></script>
 
