--- a/src/frontend/solicitudes/vista_solicitudes/vista_solicitudes.html
+++ b/src/frontend/solicitudes/vista_solicitudes/vista_solicitudes.html
@@ -83,7 +83,7 @@
 
     <script src="../../globales/validacion/validacion.js"></script>
     <script src="../../globales/msg/mensaje.js"></script>
-    <script src="./vista_solicitudes.js"></script>
+    <script type="module" src="./vista_solicitudes.js"></script>
     
     <script src="../../header/finalizar_sesion.js"></script>
     <script src="../../header/pagina_inicio.js"> </script>
