--- a/src/frontend/formularios/formulario_inscripcion/formulario_inscripcion.html
+++ b/src/frontend/formularios/formulario_inscripcion/formulario_inscripcion.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <title>Pagína inicial</title>
   <link rel="stylesheet" href="./formulario_inscripcion.css">
-  <link rel="stylesheet" href="../globales/msg/mensaje.css">
-  <link rel="stylesheet" href="../header/header.css">
-  <link rel="stylesheet" href="../footer/footer.css">
+  <link rel="stylesheet" href="../../globales/msg/mensaje.css">
+  <link rel="stylesheet" href="../../header/header.css">
+  <link rel="stylesheet" href="../../footer/footer.css">
 </head>
 
 <!-- ===== HEADER ===== -->
@@ -20,7 +20,7 @@
         </div>
 
         <nav class="header-nav">
-        <a href="../interfaz inicial/main.html" class="nav-link" id="btn-inicio">Inicio</a>
+        <a href="../../interfaz inicial/main.html" class="nav-link" id="btn-inicio">Inicio</a>
         <span class="nav-link">Contacto</span>
         <div class="nav-box">
             <span class="nav-icon">📅</span>
@@ -118,7 +118,7 @@
         <div class="footer-section">Cosas...</div>
     </footer>
 
-    <script src="../globales/msg/mensaje.js"></script>
+    <script src="../../globales/msg/mensaje.js"></script>
     <script src="./formulario_inscripcion.js"></script>
     
 </HTML>
