feat: Agregar campos a creacion de usuario

--- a/src/frontend/usuarios/creacion_usuario/creacion_usuario.html
+++ b/src/frontend/usuarios/creacion_usuario/creacion_usuario.html
@@ -59,8 +59,27 @@
                   <option value="Administrador académico">Administrador académico</option>
                   <option value="Administrador de usuarios">Administrador de usuarios</option>
               </select>
-          </div>
+            </div>
 
+            <div class="form-group">
+              <label class="label-input">Primer nombre</label>
+              <input type="text" id="inputPrimerNombre" class="input-text">
+            </div>
+
+            <div class="form-group">
+              <label class="label-input">Segundo nombre</label>
+              <input type="text" id="inputSegundoNombre" class="input-text">
+            </div>
+
+            <div class="form-group">
+              <label class="label-input">Primer apellido</label>
+              <input type="text" id="inputPrimerApellido" class="input-text">
+            </div>
+
+            <div class="form-group">
+              <label class="label-input">Segundo apellido</label>
+              <input type="text" id="inputSegundoApellido" class="input-text">
+            </div>
 
             <div class="form-group">
                 <label class="label-input">Correo electrónico</label>
