feat: Logica de intentos

--- a/src/frontend/interfaz_inicial/main.html
+++ b/src/frontend/interfaz_inicial/main.html
@@ -20,7 +20,7 @@
         </div>
 
         <nav class="header-nav">
-        <a href="../interfaz inicial/main.html" class="nav-link" id="btn-inicio">Inicio</a>
+        <a href="../interfaz_inicial/main.html" class="nav-link" id="btn-inicio">Inicio</a>
         <span class="nav-link">Contacto</span>
         <div class="nav-box">
             <span class="nav-icon">📅</span>
@@ -48,7 +48,7 @@
         <p>
         Si deseas que tu niño se forme en esta gran familia, realiza la preinscripción a continuación:
         </p>
-        <a href="../formularios/formulario_inscripcion/formulario_inscripcion.html" class="btn-preinscribir">Preinscribir</a>
+        <a href="../formularios/formulario_inscripcion.html" class="btn-preinscribir">Preinscribir</a>
     </aside>
     </main>
 
