--- a/src/frontend/usuarios/creacion_usuario/creacion_usuario.html
+++ b/src/frontend/usuarios/creacion_usuario/creacion_usuario.html
@@ -107,6 +107,7 @@
 
     <script src="../../globales/validacion/validacion.js" defer></script>
     <script src="../../globales/msg/mensaje.js" defer></script>
+    <script src="../../globales/intentos/intentos.js" defer></script>
     <script src="./creacion_usuario.js" defer></script>
 
     <script src="../../header/finalizar_sesion.js"></script>
