--- a/src/frontend/login/login.html
+++ b/src/frontend/login/login.html
@@ -23,7 +23,7 @@
     </div>
 
     <nav class="header-nav">
-      <a href="../interfaz inicial/main.html" class="nav-link" id="btn-inicio">Inicio</a>
+      <a href="../interfaz_inicial/main.html" class="nav-link" id="btn-inicio">Inicio</a>
       <span class="nav-link">Contacto</span>
       <div class="nav-box">
         <span class="nav-icon">📅</span>
@@ -63,7 +63,9 @@
 
   <script src="../globales/msg/mensaje.js" defer></script>
   <script src="../boletines/boletin_particular/descargar_boletin.js"></script>
-  <script src="./login.js" defer></script>
+  <script src="../globales/intentos/intentos.js"></script>
+
+  <script type="module" src="./login.js" defer></script>
 
 </body>
 
