--- a/src/frontend/restablecer_contraseña/solicitud_restablecer_contraseña/solicitud_restablecer_contraseña.html
+++ b/src/frontend/restablecer_contraseña/solicitud_restablecer_contraseña/solicitud_restablecer_contraseña.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restablecer Contraseña</title>
     <link rel="stylesheet" href="../restablecer_contraseña.css">
+    <link rel="stylesheet" href="../../globales/msg/mensaje.css">
     <link rel="stylesheet" href="../../header/header.css">
     <link rel="stylesheet" href="../../footer/footer.css">
 </head>
@@ -58,7 +59,8 @@
         <div class="footer-section">Cosas...</div>
     </footer>
 
-    <script src="solicitud_restablecer_contraseña.js"></script>
+    <script src="../../globales/msg/mensaje.js" defer></script>
+    <script src="solicitud_restablecer_contraseña.js" defer></script>
 </body>
 
 </html>
